[workspace]
resolver = "2"
members = [
    "crates/coordinator/profiles",
    "crates/coordinator/atomic_habits",
    "crates/integrity/atomic_habits",
    "crates/integrity/profiles",
    "crates/types/*"
]
exclude = [ "crates/types"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
