[package]
authors = ["n.stebbings@gmail.com"]
description = "Atomic habits coordinator types"
version = "0.1.0"
edition = "2021"
license = "MIT"
name = "hc_zome_atomic_habits_coordinator_types"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_atomic_habits_coordinator_types"

[dependencies]
derive_more = "0"
serde = "1"
hdk = "0.0.147"

hc_zome_atomic_habits_integrity_types = {path = "../integrity_types"}