[package]
authors = ["n.stebbings@gmail.com"]
description = "Atomic habits integrity types"
version = "0.1.0"
edition = "2021"
license = "MIT"
name = "hc_zome_atomic_habits_integrity_types"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_atomic_habits_integrity_types"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
hdi = "0.0.19"